# blis-fortran

./: .gitignore  Makefile  Makefile.am  README  README.md  abstract.md  blis.cocci  blis_gemm.h  blis_ops.py  blis_support.cocci  blis_support.h  config_ivan.sh  configure.ac  fortran_bindings.mk  issues.md  print_enums.c  remove_single_void.cocci  string_wrappers.cocci
examples/: Makefile  demo_gemm.F90
include/: blis.inc  blis_enums.inc  blis_generics.inc  blis_support.inc  gemm.inc  string_wrappers.inc
modules/: blis.f90  blis_enums.f90  blis_kinds.F90
templates/: bli_utilities.fypp
tests/: attribute_default.c  attribute_default.cocci  noattr.cocci  noattr.res  noobj.c  noobj.cocci  noobj.res  noobjparm.c  noobjparm.cocci  noobjparm.res  novoid.c  novoid.cocci  novoid.res
